# blockchainrelativity

./: .gitignore  Applicatives.hs  README.md  package.json
NFT/: cabal.project  minting.cabal  mintwalkthrough.md
NFT/src/Minting/: DAPMinted.hs  Types.hs
assets/: vasil-even-minimum.json  vasil-event-nft.json
scripts/: CLI.hs  DAPMinted.hs  generate_payment_addr.sh  generate_phk_from_vkey.sh  generate_script_addr_from_file.sh  get_init_datum.sh  get_utxos.sh  has_init_datum.hs  submit_init_tx.sh  transactionbuilding.sh  txbuild.sh
src/: emulator_trace.hs  nft.hs
