Cabal-Version:      2.4
Name:               DAPMinted
Version:            0.1.0.0
Author:               Curtis Myers
Maintainer:           
Build-Type:           Simple
Copyright:            © 2021 Lars Bruenjes
License:              Apache-2.0
License-files:        LICENSE

library
  hs-source-dirs:      src
  exposed-modules:     Minting.DAPMinted, Minting.Types
  build-depends:       aeson
                     , base ^>=4.14.1.0
                     , containers
                     , data-default
                     , freer-extras
                     , playground-common
                     , plutus-contract
                     , plutus-ledger
                     , plutus-ledger-api
                     , plutus-ledger-constraints
                     , plutus-tx-plugin
                     , plutus-tx
                     , text
  default-language:    Haskell2010
  ghc-options:         -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise